# warehouse_restock_prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
api/: app.py  dependencies.py  middleware.py
api/routes/: health.py  prediction.py
artifacts/: feature_columns.json  metadata.json  metrics.json
artifacts/models/: catboost_inventory_model.joblib
artifacts/reports/: feature_importance.csv  metrics.json  restock_recommendation.csv  test_predictions.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: config.yaml  features.yaml  logging.yaml  model.yaml
notebook/: 01_EDA.ipynb
notebooks/: 01_data_exploration.ipynb  02_data_preprocessing.ipynb  03-model_training_and_prediction.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
src/config/: paths.py  settings.py
src/exception/: custom_exception.py
src/logger/: logger.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/schemas/: api_response.py  error_response.py  health_response.py  prediction_request.py  prediction_response.py
src/utils/: common.py
tests/unit/: 0-foundation_test.py  01-test_ingestion.py  02-test_csv_loader.py  03-test_data_reader.py  04-test_schema_validator.py  05-test_merge_data.py  06-test_clean_data.py  07-test_preprocess.py  08-test_lag_features.py  09-test_target_builder.py  10-test_rolling_features.py  11-test_feature_builder.py  12-test_time_series_split.py  13-test_model_trainer.py  14-test_model_evaluator.py  (+6 more)
(+23 files in other folders)
