[project]
name = "warehouse-restock-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.8",
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "numpy>=2.3.0",
    "openpyxl>=3.1.5",
    "plotly>=6.2.0",
    "polars>=1.42.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.3.0",
]
